--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,62 @@
+/* CSS RESET*/
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+a {
+  -webkit-tap-highlight-color: transparent;
+}
+@media (any-hover: hover) {
+  a:hover {
+    -webkit-tap-highlight-color: transparent;
+  }
+}
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+}
+
 html,
 body {
-  padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  overflow-x: hidden;
+  color: rgb(31, 31, 31);
 }
 
+::selection {
+  background-color: rgb(39, 39, 39);
+  color: rgb(247, 247, 247);
+}
 a {
-  color: inherit;
-  text-decoration: none;
+  color: rgb(24, 23, 22);
+  line-height: 1.5;
 }
 
-* {
-  box-sizing: border-box;
+li {
+  list-style: none;
+}
+.image {
+  object-fit: cover;
 }
