--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@ h3,
 h4,
 p {
   margin: 0;
+  color: #666666;
 }
 /* Set core body defaults */
 body {
@@ -50,8 +51,11 @@ body {
   color: rgb(247, 247, 247);
 }
 a {
-  color: rgb(24, 23, 22);
+  color: #666666;
   line-height: 1.5;
+}
+a:hover {
+  color: #202020;
 }
 
 li {
