--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,18 @@
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  margin: 1em;
+  font-family: 'Roboto', 'Arial', 'Helvetica', 'sans-serif';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  line-height: 1;
-  background: linear-gradient(#f3f3f3, #ffffff);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  font-size: 1em;
+  color: black;
+  background-color: #fff;
+
 }
 ::selection {
-  background-color: #ffffff;
-  color: #a8a8a8;
+  background-color: black;
+  color: white;
 }
 
 svg {
@@ -31,11 +29,55 @@ body,
 #root,
 #__next,
 #__next > div,
-.theme-0 {
-  height: 100%;
-}
+
 
 #__next {
   position: relative;
   z-index: 0;
 }
+
+p{
+  margin: 0;
+  line-height: 1.2;
+}
+section {
+  padding-bottom: 1em;
+}
+a{
+  color: #303030;
+  text-decoration: none;
+}
+a:hover{
+  color: black;
+}
+
+.flex{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 0.6em;
+  margin: .5em 0 0 0;
+}
+
+.customLink{
+  min-width: 1.2em;
+  min-height: 1.2em;
+  background-color: white;
+  border: 1px solid black;
+  cursor: pointer;
+}
+.customLink:hover{
+  background-color: black;
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+li{
+  margin: .2em 0;
+  padding: 0;
+  cursor: pointer;
+}
+
